--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,39 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>HTML&CSS afternoon project-3</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="reset.css"/>
+    <link rel="stylesheet" href="index.css" />
+    <script src="main.js"></script>
+</head>
+<body>
+
+    <div class="row row-1">
+        <div class="row-1-div"></div>
+    </div>
+    
+    <div class=".row-big row-2">
+        <h2>
+            Consider hiding the status bar-and all other
+            app UI-while people are actively<br>viewing
+            full-screen media. If you hide the status bar,
+            be sure to let people retrieve<br> it 
+            (and the appropriate app UI) with a single
+            tap. Unless you have a compelling<br> reason 
+            to do so, avoid defining a custom gesture 
+            to redisplay the status bar<br>because users 
+            are unlikely to discover such a gesture or 
+            to remember it.
+        </h2>
+    </div>
+
+    <div class="row row-3"></div>
+    <div class="row row-4"></div>
+    <div class="row row-5"></div>
+    <div class="row row-6"></div>
+    
+</body>
+</html>
